--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
     <div class="second-sliding-page" id="second-sliding-page">
         <div class="second-search-bar-container">
             <input type="text" placeholder="Search..." id="second-search-input">
-            <button class="second-close-button" id="second-close-button">&times;</button>
+            <button class="second-close-button" id="second-close-button"><i class="fa-solid fa-x"></i></button>
         </div>
     </div>
 
