--- a/index.html
+++ b/index.html
@@ -209,6 +209,41 @@
         </div>
     </div>
 
+    <div class="Outer-four-central-box">
+        <div class="four-central-box">
+            <div class="four-header">Websites</div>
+            <div class="four-boxes-container">
+                <div class="four-box-container">
+                    <a href="https://zansah.github.io/SunsNoodles/index.html" target="_blank">
+                        <div class="four-box">
+                            <img src="Chinese Noodles.jpg" alt="Image 1">
+                        </div>
+                    </a>
+                    <p class="four-box-text">Sun's Noddles</p>
+                </div>
+                <div class="four-box-container">
+                    <a href="https://zansah.github.io/Calculator/" target="_blank">
+                        <div class="four-box">
+                            <img src="Calculator.jpg" alt="Image 2">
+                        </div>
+                    </a>
+                    <p class="four-box-text">Calculator</p>
+                </div>
+                <div class="four-box-container">
+                    <div class="four-box">
+                        <img src="path/to/your/image3.jpg" alt="Image 3">
+                    </div>
+                    <p class="four-box-text">Box 3 Content</p>
+                </div>
+                <div class="four-box-container">
+                    <div class="four-box">
+                        <img src="path/to/your/image4.jpg" alt="Image 4">
+                    </div>
+                    <p class="four-box-text">Box 4 Content</p>
+                </div>
+            </div>
+        </div>
+    </div>
 
 
 
