--- a/index.html
+++ b/index.html
@@ -246,6 +246,23 @@
     </div>
 
 
+    <div class="giant-card-container">
+        <div class="giant-card">Card 1</div>
+        <div class="giant-card">Card 2</div>
+        <div class="giant-card">Card 3</div>
+        <div class="giant-card">Card 4</div>
+        <div class="giant-card">Card 5</div>
+        <div class="giant-card">Card 6</div>
+      </div>
+      <div class="giant-dots-container">
+        <span class="giant-card-dot active"></span>
+        <span class="giant-card-dot"></span>
+        <span class="giant-card-dot"></span>
+        <span class="giant-card-dot"></span>
+        <span class="giant-card-dot"></span>
+        <span class="giant-card-dot"></span>
+      </div>
+
 
    
 
