--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Quicksand:wght@300..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
@@ -22,10 +25,7 @@
             <div class="header-title"><span>Resume</span></div>
             <div class="header-title"><span>Connect</span></div>
         </div>
-
-        <div class="logo-box">
-            <i class="fa-solid fa-caret-down"></i>
-        </div>
+        
 
         <div class="third-sliding-page" id="third-sliding-page">
             <button class="third-close-button" id="third-close-button"><i class="fa-solid fa-x" style="position: absolute;
@@ -56,6 +56,9 @@
         <div class="circle-around-mag-glass" id="searchIcon">
             <i class="fa-solid fa-magnifying-glass" id="menu-toggle"></i>
         </div>
+
+        <i class="fa-solid fa-bars fa-2x"></i>
+
         <div class="search-body">
             <div id="searchHeader" class="search-header hidden">
                 <div class="search-bar-container">
@@ -67,6 +70,49 @@
         </div>
 
     </header>
+
+    <div class="genre-box-container">
+        <div class="holder-genre-box">
+          <img src="Solitary Astronaut Over Earth_ A Cosmic Perspective.jpg" alt="Background Image 1" class="background-image">
+          <div class="genre-box">
+            <div class="genre-content">
+              <div class="genre-title">Genre</div>
+              <div class="category-title">General</div>
+              <button class="more-button">More</button>
+            </div>
+          </div>
+        </div>
+        <div class="holder-genre-box">
+          <img src="Unknown.jpg" alt="Background Image 2" class="background-image">
+          <div class="genre-box">
+            <div class="genre-content">
+              <div class="genre-title">Genre</div>
+              <div class="category-title">Web Development</div>
+              <button class="more-button">More</button>
+            </div>
+          </div>
+        </div>
+        <div class="holder-genre-box">
+          <img src="-14 forest.jpg" alt="Background Image 3" class="background-image">
+          <div class="genre-box">
+            <div class="genre-content">
+              <div class="genre-title">Genre</div>
+              <div class="category-title">Game Development</div>
+              <button class="more-button">More</button>
+            </div>
+          </div>
+        </div>
+        <div class="holder-genre-box">
+          <img src="Unknown.jpg" alt="Background Image 4" class="background-image">
+          <div class="genre-box">
+            <div class="genre-content">
+              <div class="genre-title">Genre</div>
+              <div class="category-title">Algorithms</div>
+              <button class="more-button">More</button>
+            </div>
+          </div>
+        </div>
+      </div>
 
     <div class="main-sliding-page" id="main-sliding-page">
         <div class="main-sliding-page-content">
@@ -209,6 +255,7 @@
         </div>
     </div>
 
+
     <div class="Outer-four-central-box">
         <div class="four-central-box">
             <div class="four-header">Websites</div>
@@ -245,24 +292,42 @@
         </div>
     </div>
 
+    <div class="giant-contain">
+        <div class="giant-card-container">
+            <div class="giant-card">Card 1</div>
+            <div class="giant-card">Card 2</div>
+            <div class="giant-card">Card 3</div>
+            <div class="giant-card">Card 4</div>
+            <div class="giant-card">Card 5</div>
+            <div class="giant-card">Card 6</div>
+        </div>
+        <div class="giant-dots-container">
+            <span class="giant-card-dot active"></span>
+            <span class="giant-card-dot"></span>
+            <span class="giant-card-dot"></span>
+            <span class="giant-card-dot"></span>
+            <span class="giant-card-dot"></span>
+            <span class="giant-card-dot"></span>
+        </div>
+    </div>
 
-    <div class="giant-card-container">
-        <div class="giant-card">Card 1</div>
-        <div class="giant-card">Card 2</div>
-        <div class="giant-card">Card 3</div>
-        <div class="giant-card">Card 4</div>
-        <div class="giant-card">Card 5</div>
-        <div class="giant-card">Card 6</div>
-      </div>
-      <div class="giant-dots-container">
-        <span class="giant-card-dot active"></span>
-        <span class="giant-card-dot"></span>
-        <span class="giant-card-dot"></span>
-        <span class="giant-card-dot"></span>
-        <span class="giant-card-dot"></span>
-        <span class="giant-card-dot"></span>
-      </div>
-
+    <div class="genre-tab-container">
+        <div class="genre-tab">Web Development</div>
+        <div class="genre-tab">General</div>
+        <div class="genre-tab">Game Development</div>
+        <div class="genre-tab">Algorithms</div>
+        <div class="genre-tab">Blooket</div>
+        <div class="genre-tab">Card 6</div>
+    </div>
+    <div class="genre-tab-container">
+        <div class="genre-tab">Card 1</div>
+        <div class="genre-tab">Card 2</div>
+        <div class="genre-tab">Card 3</div>
+        <div class="genre-tab">Card 4</div>
+        <div class="genre-tab">Card 5</div>
+        <div class="genre-tab">Card 6</div>
+        <div class="genre-tab">Card 6</div>
+    </div>
 
    
 
