--- a/index.html
+++ b/index.html
@@ -52,12 +52,13 @@
         </div>
 
 
+        <div icon-container></div>
+            <div class="circle-around-mag-glass" id="searchIcon">
+                <i class="fa-solid fa-magnifying-glass" id="menu-toggle"></i>
+            </div>
 
-        <div class="circle-around-mag-glass" id="searchIcon">
-            <i class="fa-solid fa-magnifying-glass" id="menu-toggle"></i>
+            <i class="fa-solid fa-bars fa-2x"></i>
         </div>
-
-        <i class="fa-solid fa-bars fa-2x"></i>
 
         <div class="search-body">
             <div id="searchHeader" class="search-header hidden">
