--- a/index.html
+++ b/index.html
@@ -115,6 +115,30 @@
         </div>
       </div>
 
+      <div gray-box>
+        
+      </div>
+
+      <div class="header-container">
+        <h1 class="discover">Discover more</h1>
+      </div>
+      <div class="genre-scroll-container">
+        <span class="genre-name">General</span>
+        <span class="genre-name">Web Development</span>
+        <span class="genre-name">Game Development</span>
+        <span class="genre-name">Algorithms</span>
+        <span class="genre-name">Blooket</span>
+        <span class="genre-name">Genre 6</span>
+        <span class="genre-name">Genre 7</span>
+        <span class="genre-name">Genre 8</span>
+        <span class="genre-name">Genre 9</span>
+        <span class="genre-name">Genre 10</span>
+      </div>
+
+      <div class="season-projects">
+        <p>Summer 2024</p>
+      </div>
+
     <div class="main-sliding-page" id="main-sliding-page">
         <div class="main-sliding-page-content">
             <!-- <span class="close-button" id="close-button">&times;</span> -->
@@ -312,25 +336,7 @@
         </div>
     </div>
 
-    <div class="genre-tab-container">
-        <div class="genre-tab">Web Development</div>
-        <div class="genre-tab">General</div>
-        <div class="genre-tab">Game Development</div>
-        <div class="genre-tab">Algorithms</div>
-        <div class="genre-tab">Blooket</div>
-        <div class="genre-tab">Card 6</div>
-    </div>
-    <div class="genre-tab-container">
-        <div class="genre-tab">Card 1</div>
-        <div class="genre-tab">Card 2</div>
-        <div class="genre-tab">Card 3</div>
-        <div class="genre-tab">Card 4</div>
-        <div class="genre-tab">Card 5</div>
-        <div class="genre-tab">Card 6</div>
-        <div class="genre-tab">Card 6</div>
-    </div>
 
-   
 
 
     <div class="contain">
