--- a/contact.html
+++ b/contact.html
@@ -29,38 +29,39 @@
 
 
     <section id="contact">
-        <div class="phone-container">
-            <div class="phone-screen">
-                <h3>Contact</h3>
-                <form action="https://api.web3forms.com/submit" method="POST" id="contactForm">
-                    <input type="hidden" name="access_key" value="439b3317-f85d-4b88-9620-fd1325985855">
-                    <div class="form-row">
-                        <div class="form-group">
-                            <label for="name">FIRST AND LAST NAME:</label>
-                            <input style="width:93%;" type="text" id="name" name="name" required>
+        <div class="center-phone-container">
+            <div class="phone-container">
+                <div class="phone-screen">
+                    <h3>Contact</h3>
+                    <form action="https://api.web3forms.com/submit" method="POST" id="contactForm">
+                        <input type="hidden" name="access_key" value="439b3317-f85d-4b88-9620-fd1325985855">
+                        <div class="form-row">
+                            <div class="form-group">
+                                <label for="name">FIRST AND LAST NAME:</label>
+                                <input style="width:93%;" type="text" id="name" name="name" required>
+                            </div>
+                            <div class="form-group">
+                                <label for="email">YOUR EMAIL ADDRESS:</label>
+                                <input style="width:93%;" type="email" id="email" name="email" required>
+                            </div>
                         </div>
                         <div class="form-group">
-                            <label for="email">YOUR EMAIL ADDRESS:</label>
-                            <input style="width:93%;" type="email" id="email" name="email" required>
+                            <label for="message">MESSAGE:</label>
+                            <textarea style="width:93%;" id="message" name="message" rows="4" required></textarea>
                         </div>
-                    </div>
-                    <div class="form-group">
-                        <label for="message">MESSAGE:</label>
-                        <textarea style="width:93%;" id="message" name="message" rows="4" required></textarea>
-                    </div>
-                    <button type="submit">Submit</button>
-                </form>
+                        <button type="submit">Submit</button>
+                    </form>
 
-                <div class="phone-buttons">
-                    <a href="mailto:zansah31@gmail.com"><button><i class="fa-solid fa-envelope"></i></button></a>
-                    <a href="discordapp.com/users/824044512564215819"><button><i class="fa-brands fa-discord"></i></button></a>
-                    <a href="https://www.instagram.com/uncle_ansah/"><button><i class="fa-brands fa-instagram"></i></button></a>
-                    <a href="https://www.linkedin.com/in/zephaniah-ansah-78b62b27a/"><button><i class="fa-brands fa-linkedin-in"></i></button></a>
-                    <a href="https://github.com/Zansah"><button><i class="fa-brands fa-github"></i></button></a>
+                    <div class="phone-buttons">
+                        <a href="mailto:zansah31@gmail.com"><button><i class="fa-solid fa-envelope"></i></button></a>
+                        <a href="discordapp.com/users/824044512564215819"><button><i class="fa-brands fa-discord"></i></button></a>
+                        <a href="https://www.instagram.com/uncle_ansah/"><button><i class="fa-brands fa-instagram"></i></button></a>
+                        <a href="https://www.linkedin.com/in/zephaniah-ansah-78b62b27a/"><button><i class="fa-brands fa-linkedin-in"></i></button></a>
+                        <a href="https://github.com/Zansah"><button><i class="fa-brands fa-github"></i></button></a>
+                    </div>
                 </div>
             </div>
         </div>
-
     </section>
 
 
