--- a/contact.html
+++ b/contact.html
@@ -59,6 +59,9 @@
                         <a href="https://www.linkedin.com/in/zephaniah-ansah-78b62b27a/"><button><i class="fa-brands fa-linkedin-in"></i></button></a>
                         <a href="https://github.com/Zansah"><button><i class="fa-brands fa-github"></i></button></a>
                     </div>
+
+                    <div class="underline"></div>
+
                 </div>
             </div>
         </div>
