--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
       <div class="header-container">
         <h1 class="collection">COLLECTION OF PROJECTS</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam a dolore exercitationem necessitatibus, magnam molestias beatae, dolorum numquam deserunt ea explicabo porro alias, dolor ex ducimus. Fuga, dolorum. Sit, quos.</p>
-        <button class="discover-button">Discover</button>
+        <button class="discover-button"><a href="project.html">Discover</a></button>
       </div>
 
     <div class="Outer-four-central-box">
@@ -156,10 +156,12 @@
                     <p class="four-box-text">Calculator</p>
                 </div>
                 <div class="four-box-container">
-                    <div class="four-box">
-                        <img src="Photo Phone Weather.jpg" alt="Image 3">
-                    </div>
-                    <p class="four-box-text">Weather App (Waiting on API)</p>
+                    <a href="https://zansah.github.io/Weather/">
+                        <div class="four-box">
+                            <img src="Photo Phone Weather.jpg" alt="Image 3">
+                        </div>
+                    </a>
+                    <p class="four-box-text">Weather App</p>
                 </div>
                 <div class="four-box-container">
                     <div class="four-box">
@@ -179,9 +181,11 @@
       </div>
 
 
-    <div class="main-sliding-page" id="main-sliding-page">
+    <div class="main-sliding-page" id ="main-sliding-page">
         <div class="main-sliding-page-content">
-            <!-- <span class="close-button" id="close-button">&times;</span> -->
+            <div class="close-text-container">
+                <button class="close-text" id="close-text">Close</button>
+            </div>
             <div class="slider" id="slider">
                 <div class="second-search-bar">
                     <!-- <input type="text" placeholder="Search..." id="search-input"> -->
