--- a/index.html
+++ b/index.html
@@ -191,10 +191,13 @@
                     <!-- <input type="text" placeholder="Search..." id="search-input"> -->
                     <div class="search-bar-container-2">
                         <button id="search-button"><i class="fa-solid fa-magnifying-glass" style="color: black; margin-left: 10px; margin-right: 5px;"></i>Search...</button>
+                        <div class="cancel-button" id="cancel-button">Cancel</div>
                     </div>
                 </div>
                 <div class="slides">
-                    <div class="slide">Slide 1</div>
+                    <div class="slide">
+                        <img src="Photo astronaut.jpg" alt="" class="slide-image">
+                    </div>
                     <div class="slide">Slide 2</div>
                     <div class="slide">Slide 3</div>
                     <div class="slide">Slide 4</div>
