--- a/index.html
+++ b/index.html
@@ -378,11 +378,13 @@
 
    <div class="last">
 
-        <!-- <a href="mailto:znansah@wm.edu">Email</i></a>
-        <a href="https://www.instagram.com/uncle_ansah/">Instagram</i></a>
-        <a href="https://github.com/Zansah">Github</a>
-        <a href="https://www.linkedin.com/in/zephaniah-ansah-78b62b27a/">Linkedin</a> -->
-        <!-- <div  class="underline"></div> -->
+        <div><span>Resources</span></div>
+        <a href="#" class="last-options">Site Feedback</a>
+        <a href="mailto:znansah@wm.edu" class="last-options">Email Me</i></a>
+        <a href="https://www.instagram.com/uncle_ansah/" class="last-options">Instagram</i></a>
+        <a href="https://github.com/Zansah" class="last-options">Github</a>
+        <a href="https://www.linkedin.com/in/zephaniah-ansah-78b62b27a/" class="last-options">Linkedin</a>
+        <a href="https://www.linkedin.com/in/zephaniah-ansah-78b62b27a/" class="last-options">Discord</a>
     </div>
 
     <!-- Leave Feedback and then other options in the header and then icons ands then space at the end -->
