--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 
       <div class="header-container">
         <h1 class="collection">COLLECTION OF PROJECTS</h1>
-        <p> Quam a dolore exercitationem necessitatibus, magnam molestias beatae, dolorum numquam deserunt ea explicabo porro alias, dolor ex ducimus. Fuga, dolorum. Sit, quos.</p>
+        <p style="text-align: center;">Innovative solutions, thoughtfully crafted. Explore the work that brings ideas to life.</p>
         <button class="discover-button"><a href="project.html">Discover</a></button>
       </div>
 
@@ -150,9 +150,9 @@
             <div class="four-header">Websites</div>
             <div class="four-boxes-container">
                 <div class="four-box-container">
-                    <a href="https://zansah.github.io/SunsNoodles/index.html" target="_blank">
+                    <a href="https://zansah.github.io/SunsNoodles/updated-index.html" target="_blank">
                         <div class="four-box">
-                            <img src="Photo Chinese Noodles.jpg" alt="Image 1">
+                            <img src="UPhoto Chinese Noodles.jpg" alt="Image 1">
                         </div>
                     </a>
                     <p class="four-box-text">Sun's Noddles</p>
@@ -160,7 +160,7 @@
                 <div class="four-box-container">
                     <a href="https://zansah.github.io/Calculator/" target="_blank">
                         <div class="four-box">
-                            <img src="Photo Calculator.jpg" alt="Image 2">
+                            <img src="UPhoto Calculator.jpg" alt="Image 2">
                         </div>
                     </a>
                     <p class="four-box-text">Calculator</p>
@@ -168,7 +168,7 @@
                 <div class="four-box-container">
                     <a href="https://zansah.github.io/Weather/">
                         <div class="four-box">
-                            <img src="Photo Phone Weather.jpg" alt="Image 3">
+                            <img src="UPhoto Phone Weather.jpg" alt="Image 3">
                         </div>
                     </a>
                     <p class="four-box-text">Weather App</p>
@@ -185,7 +185,7 @@
 
    
     <div class="web-container">
-        <a class="visit-web" href="https://zansah.github.io/SunsNoodles/index.html">
+        <a class="visit-web" href="https://zansah.github.io/SunsNoodles/updated-index.html">
             <div class="web-card">
                 <div class="web-label">Website</div>
                 <div class="web-box">
@@ -253,25 +253,28 @@
                 </div>
             </div>
         </a>
-        <div class="web-card">
-            <div class="web-label">Website</div>
-            <div class="web-box">
-                <img src="Photo Frieren.jpg" alt="Image 4">
-            </div>
 
-            <div class="web-content">
-                <div class="web-link">Visit Website</div>
-                <div class="web-title">Title</div>
-                <div class="web-description"> Atque impedit ipsa asperiores molestiae esse provident, dolorum soluta laborum excepturi, natus beatae nisi fuga quae aliquid, explicabo consequuntur reprehenderit suscipit ut!</div>
+        <a class="visit-web" href="https://zansah.github.io/Love-Calculator/">
+            <div class="web-card">
+                <div class="web-label">Website</div>
+                <div class="web-box">
+                    <img src="photo-james-dean.jpg" alt="Image 4">
+                </div>
 
-                <div class="web-user-container">
-                    <div class="outer-web-circle">
-                        <div class="web-circle"><img src="Photo Drinking Coffee.jpg" alt=""></div>
+                <div class="web-content">
+                    <div class="web-link">Visit Website</div>
+                    <div class="web-title">Love Calculator</div>
+                    <div class="web-description">Think you're a match made in heaven? Or just here for the laughs? Enter your names into this Love Calculator and see if you're soulmates, or just two people who need better hobbies. </div>
+
+                    <div class="web-user-container">
+                        <div class="outer-web-circle">
+                            <div class="web-circle"><img src="Cat-heart-eyes.jpg" alt=""></div>
+                        </div>
+                        <div class="web-user">THE_STRONGEST</div>
                     </div>
-                    <div class="web-user">THE_STRONGEST</div>
                 </div>
             </div>
-        </div>
+        </a>   
         <div class="web-card">
             <div class="web-label">Website</div>
             <div class="web-box">
@@ -315,62 +318,70 @@
     <div class="big-projects">
         <div class="project-slider">
             <div class="project-slides">
+
                 <div class="project-slide">
                     <img src="Uphoto Toad.jpg" alt="Project Slide 1">
                     <div class="project-content">
                         <h2 class="project-title">Whack-A-Hole</h2>
-                        <p class="project-description">This is a brief description of Project 1.</p>
+                        <p class="project-description">Tap Toads as they pop up from pipes in this Mario-inspired twist on Whack-A-Mole.</p>
                         <a href="https://zansah.github.io/Whack-A-Toad/" class="visit-button" target="_blank">Visit</a>
                     </div>
                 </div>
+
                 <div class="project-slide">
                     <img src=" -27 kirby.jpg" alt="Project Slide 2">
                     <div class="project-content">
                         <h2 class="project-title"></h2>
-                        <p class="project-description">This is a brief description of Project 2.</p>
+                        <p class="project-description">This is a brief description of Project .</p>
                         <a href="#" class="visit-button">Visit</a>
                     </div>
                 </div>
+
                 <div class="project-slide">
                     <img src="UPhoto Phone Weather.jpg" alt="Project Slide 3">
                     <div class="project-content">
                         <h2 class="project-title">Project Title 3</h2>
-                        <p class="project-description">This is a brief description of Project 3.</p>
+                        <p class="project-description">This is a brief description of Project .</p>
                         <a href="#" class="visit-button">Visit</a>
                     </div>
                 </div>
+
                 <div class="project-slide">
                     <img src="UPhoto glass art.jpg" alt="Project Slide 4">
                     <div class="project-content">
                         <h2 class="project-title">Project Title 4</h2>
-                        <p class="project-description">This is a brief description of Project 4.</p>
+                        <p class="project-description">This is a brief description of Project .</p>
                         <a href="#" class="visit-button">Visit</a>
                     </div>
                 </div>
+
                 <div class="project-slide">
                     <img src="UPhoto Dora.jpg" alt="Project Slide 5">
                     <div class="project-content">
                         <h2 class="project-title">Project Title 5</h2>
-                        <p class="project-description">This is a brief description of Project 5.</p>
+                        <p class="project-description">This is a brief description of Project .</p>
                         <a href="#" class="visit-button">Visit</a>
                     </div>
                 </div>
+
                 <div class="project-slide">
                     <img src="UPhoto Iwin.jpg" alt="Project Slide 6">
                     <div class="project-content">
                         <h2 class="project-title">Project Title 6</h2>
-                        <p class="project-description">This is a brief description of Project 6.</p>
+                        <p class="project-description">This is a brief description of Project 5 .</p>
                         <a href="#" class="visit-button">Visit</a>
                     </div>
                 </div>
+
                 <div class="project-slide">
                     <img src="XPhoto Floating above earth.jpg" alt="Project Slide 7">
                     <div class="project-content">
                         <h2 class="project-title">Project Title 7</h2>
-                        <p class="project-description">This is a brief description of Project 7.</p>
+                        <p class="project-description">This is a brief description of Project .</p>
                         <a href="#" class="visit-button">Visit</a>
                     </div>
                 </div>
+
             </div>
             <div class="dots">
                 <span class="project-dot" data-slide="0"></span>
