--- a/index.html
+++ b/index.html
@@ -333,16 +333,16 @@
                 <div class="project-slide">
                     <img src=" -27 kirby.jpg" alt="Project Slide 2">
                     <div class="project-content">
-                        <h2 class="project-title"></h2>
-                        <p class="project-description">This is a brief description of Project .</p>
-                        <a href="#" class="visit-button">Visit</a>
+                        <h2 class="project-title">Pinterest Clone</h2>
+                        <p class="project-description">Welcome to my Pinterest clone, featuring images from the Pexels API.</p>
+                        <a href="https://zansah.github.io/Mini-pinterest/" class="visit-button">Visit</a>
                     </div>
                 </div>
 
                 <div class="project-slide">
                     <img src="UPhoto Phone Weather.jpg" alt="Project Slide 3">
                     <div class="project-content">
-                        <h2 class="project-title">Project Title 3</h2>
+                        <h2 class="project-title">Pinterest Clone</h2>
                         <p class="project-description">This is a brief description of Project .</p>
                         <a href="#" class="visit-button">Visit</a>
                     </div>
