--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                             <img src="v1-image/fourth-web-display.jpg" alt="Image 2">
                         </div>
                     </a>
-                    <p class="four-box-text">Love Calculatort</p>
+                    <p class="four-box-text">Love Calculator</p>
                 </div>
             </div>
         </div>
