--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
           </div>
         </div>
         <div class="holder-genre-box">
-          <img src="v1-image/second-genre-box.jpg" alt="Background Image 2" class="background-image">
+          <img src="v1-image/second-genre-box.jpeg" alt="Background Image 2" class="background-image">
           <div class="genre-box">
             <div class="genre-content">
               <div class="genre-title">Genre</div>
