--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
           </div>
         </div>
         <div class="holder-genre-box">
-          <img src="v1-image/second-genre-box.jpeg" alt="Background Image 2" class="background-image">
+          <img src="v1-image/second-genre-box.jpg" alt="Background Image 2" class="background-image">
           <div class="genre-box">
             <div class="genre-content">
               <div class="genre-title">Genre</div>
@@ -179,7 +179,7 @@
                             <img src="v1-image/fourth-web-display.jpg" alt="Image 2">
                         </div>
                     </a>
-                    <p class="four-box-text">Love Calculator</p>
+                    <p class="four-box-text">Love Calculatort</p>
                 </div>
             </div>
         </div>
@@ -256,21 +256,21 @@
             </div>
         </a>
 
-        <a class="visit-web" href="https://zansah.github.io/Love-Calculator/welcome.html">
+        <a class="visit-web" href="https://zansah.github.io/Profile-card/">
             <div class="web-card">
                 <div class="web-label">Website</div>
                 <div class="web-box">
-                    <img src="v1-image/fourth-web-display.jpg" alt="Image 4">
+                    <img src="v1-image/fifth-web-display.jpg" alt="Image 4">
                 </div>
 
                 <div class="web-content">
-                    <div class="web-link">https://zansah.github.io/Love-Calculator/welcome.html</div>
-                    <div class="web-title">Love Calculator</div>
-                    <div class="web-description">Think you're a match made in heaven? Or just here for the laughs? Enter your names into this Love Calculator and see if you're soulmates, or just two people who need better hobbies. </div>
+                    <div class="web-link">https://zansah.github.io/Profile-card/</div>
+                    <div class="web-title">Profile Card</div>
+                    <div class="web-description"></div>
 
                     <div class="web-user-container">
                         <div class="outer-web-circle">
-                            <div class="web-circle"><img src="v1-image/fourth-user.jpg" ></div>
+                            <div class="web-circle"><img src="v1-image/fifth-user.jpg" ></div>
                         </div>
                         <div class="web-user">THE_STRONGEST</div>
                     </div>
